testdata/baselines/reference/submodule/compiler/jsdocTypedefMissingType.errors.txt
/a.js(12,11): error TS8010: Type annotations can only be used in TypeScript files.


==== /a.js (1 errors) ====
    // Bad: missing a type
    /** @typedef T */
    
    const t = 0;
    
    // OK: missing a type, but have property tags.
    /**
     * @typedef Person
     * @property {string} name
     */
    
    /** @type Person */
              ~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
    const person = { name: "" };
    